--- a/src/assets/css/scss/components/_buttom.scss
+++ b/src/assets/css/scss/components/_buttom.scss
@@ -30,7 +30,8 @@
 	// transition: 1s;
 }
 .header-btn.active,header-btn.active.focus,.header-btn.active:focus,.header-btn.focus,.header-btn:active.focus,.header-btn:active:focus,.header-btn:focus{
-	background-color: brown;
+	// background-color: brown;
+	background-color: #f22e89;
     border: black 2px solid;
 }
 .header-btn.active.focus,.header-btn.active:focus,.header-btn.focus,.header-btn:active.focus,.header-btn:active:focus,.header-btn:focus{
