--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -265,6 +265,9 @@
   }
 }
 @media screen and (max-width: 1024px) {
+  .header{
+    background-image: none;
+  }
   .container-waps {
     height: auto;
   }
@@ -1045,8 +1048,9 @@
     width: 80%;
   }
   .header-btn {
-    line-height: 1.75rem;
-    font-size: 100%;
+    line-height: 0.5rem;
+    font-size: 70%;
+    width:40px;
   }
   .header-userName {
     font-size: 0.5rem;
@@ -1069,9 +1073,6 @@
   }
   .betArea {
     height: 310px;
-  }
-  .betRatioText{
-    font-size: 0.8rem;
   }
   .betStatus {
     font-size: 1rem;
@@ -1240,10 +1241,6 @@
   .header-userName {
     line-height: 0.7rem;
   }
-  .header-btn {
-    line-height: 1rem;
-    font-size: 100%;
-  }
   .header-btnList {
     width: 100% !important;
   }
@@ -1287,10 +1284,10 @@
     font-size: 1rem;
   }
   .betArea-mobile {
-    height: 117px;
+    height: 121px;
   }
   .betArea-mobile-container {
-    height: 117px;
+    height: 121px;
   }
   .card-container {
     margin-top: -35px;
