--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -164,6 +164,9 @@
     @include hisRoadSpritePosition(-1100, 0, 0.29);
   }
   //大路
+  .big-T{
+    @include tiePosition(0,0,0.15);
+  }
   .big-B {
     //莊
     @include hisRoadSpritePosition(0, 100, 0.15);
@@ -489,6 +492,9 @@
     @include hisRoadSpritePosition(-1100, 0, 0.35);
   }
   //大路
+  .big-T{
+    @include tiePosition(0,0,0.2);
+  }
   .big-B {
     //莊
     @include hisRoadSpritePosition(0, 100, 0.2);
@@ -735,6 +741,9 @@
     @include hisRoadSpritePosition(-1100, 0, 0.3);
   }
   //大路
+  .big-T{
+    @include tiePosition(0,0,0.17);
+  }
   .big-B {
     //莊
     @include hisRoadSpritePosition(0, 100, 0.17);
@@ -943,6 +952,9 @@
     @include hisRoadSpritePosition(-1100, 0, 0.15);
   }
   //大路
+  .big-T{
+    @include tiePosition(0,0,0.08);
+  }
   .big-B {
     //莊
     @include hisRoadSpritePosition(0, 100, 0.08);
@@ -1540,6 +1552,9 @@
     @include hisRoadSpritePosition(-1100, 0, 0.1);
   }
   //大路
+  .big-T{
+    @include tiePosition(0,0,0.06);
+  }
   .big-B {
     //莊
     @include hisRoadSpritePosition(0, 100, 0.06);
