--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -62,9 +62,11 @@
     }
     .askRoad-player{
         color:red;
+        cursor: pointer;
     }
     .askRoad-banker{
         color:yellow;
+        cursor: pointer;
     }
     .shotCoinUl{  
         width:100%;
