--- a/src/assets/css/scss/components/_historyRoad.scss
+++ b/src/assets/css/scss/components/_historyRoad.scss
@@ -1,6 +1,20 @@
 .roadImg-preLoad {  //預載資源
     @extend %hisRoad;
 }
+.askRoadanimation{
+    animation-name: askRoad;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease;
+}
+@keyframes askRoad {
+    from{
+        opacity: 0.5;
+    }to{
+        opacity: 1;
+        transform: scale(1.1);
+    }
+}
 //路圖圖示區
 //珠仔路
 .BeadPlate-B{  //莊
