//更新檯紅邏輯

--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -5,6 +5,7 @@
 @import './scss/util/util';
 @import './scss/base/base';
 //layout
+@import './scss/layout/home';
 @import './scss//layout/mainLayout';
 @import './scss/layout/grid';
 @import './scss/layout/header';
