--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -78,6 +78,21 @@ img {
   font-size: 2.8rem !important;
 }
 
+.tableItem {
+  cursor: pointer;
+  border: 5px solid #644d31;
+  border-radius: 5px;
+}
+
+.tableList {
+  height: 95%;
+}
+
+.table-img {
+  width: 250px;
+  height: 250px;
+}
+
 /*-------------------------------------------
      基本版面設定區
 -------------------------------------------*/
@@ -2132,8 +2147,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .header-btn {
     width: auto;
-    line-height: 4.75rem;
-    font-size: 250%;
+    line-height: 1.75rem;
+    font-size: 180%;
   }
   .header-top {
     display: -webkit-box;
@@ -2579,9 +2594,6 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .header {
     height: 40px;
   }
-  .header-btn {
-    line-height: 2.75rem;
-  }
   .video-box {
     height: 430px;
   }
@@ -2973,14 +2985,18 @@ a.btn.disabled, fieldset[disabled] a.btn {
     height: 30px;
   }
   .header-btn {
-    font-size: 150%;
-    line-height: 1.5rem;
+    font-size: 100%;
+    line-height: 1rem;
   }
   .video-box {
     height: 290px;
   }
   #countNumber {
     top: 3%;
+  }
+  .table-img {
+    width: 150px;
+    height: 150px;
   }
   .betArea-item,
   .betStatus {
@@ -3375,6 +3391,13 @@ a.btn.disabled, fieldset[disabled] a.btn {
     top: 25%;
     font-size: 40%;
   }
+  .table-img {
+    width: 100px;
+    height: 100px;
+  }
+  .tableItem {
+    font-size: 12px;
+  }
   .header-top {
     width: 90%;
   }
@@ -3388,6 +3411,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
     line-height: 0.5rem;
     font-size: 70%;
     width: 40px;
+  }
+  .bettingArea-btn-left {
+    width: 70%;
   }
   .header-userName {
     font-size: 0.5rem;
@@ -3478,6 +3504,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
 @media screen and (max-width: 375px) {
   .video-box {
     height: 210px;
+  }
+  .tableItem {
+    padding: 5px !important;
   }
   .betArea {
     height: 265px;
@@ -3620,6 +3649,12 @@ a.btn.disabled, fieldset[disabled] a.btn {
 @media screen and (max-width: 320px) {
   .header {
     height: 30px;
+  }
+  .tableItem {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .header-userName {
     line-height: 0.7rem;
